src/FinancialForce ERP Core/objects/ERPProduct__c.object
<CustomObject>
    <customHelpPage>ErpProductHelp</customHelpPage>
    <description>A FinancialForce product known to the ERP system</description>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this linked product has been made by the user</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No longer in use.</description>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServicePack__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Pack</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VersionMajor__c</fullName>
        <label>Major Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VersionMinor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minor Version</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Registered Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DeveloperName__c</columns>
        <columns>VersionMajor__c</columns>
        <columns>VersionMinor__c</columns>
        <columns>ServicePack__c</columns>
        <columns>Obsolete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>